tests/fail/sema_strict.stderr
error[E0413]: Invalid operands for operation '==': 'i32' and 'cstring'
 --> tests/fail/sema_strict.tk:19:16
   |
 19 |     auto c = 1 == "s" // Error: operands must be same type
   |                ^
error[E0467]: Variable 'y' implies pointer type '*i32' but lacks explicit sigil. Use 'auto *y' or dereference.
 --> tests/fail/sema_strict.tk:27:10
   |
 27 |     auto y = *x // Error: cannot dereference non-pointer
   |          ^
error[E0409]: Cannot initialize variable of type 'i32' with value of type 'cstring'
 --> tests/fail/sema_strict.tk:30:10
   |
 30 |     auto z: i32 = "hello" // Error: mismatch
   |          ^
